crates/fluvio-connector-derive/tests/ui/wrong_direction.rs
use fluvio_connector_derive::connector;

#[connector(wrong)]
fn start_fn() {}
